SERVER-8926 Remove extra error text and 'L' line number prefix